Version 1.7.3
-------------

- Fix support for JUL handler level. (thanks nsitbon)

Version 1.7.2
-------------

- Set HTTPConnection read timeout to 5 seconds. (thanks kalaspuffar)

Version 1.7.1
-------------

- Android Gradle Plugin: Improve various directory structure support. (thanks ruZZil)

Version 1.7.0
-------------

- Warn (once) when a client lockdown is first initiated and why.
- Log events skipped by a lockdown at the DEBUG level.
- Don't log a full stacktrace when an HTTP 429 (Too Many Requests) is returned.
- Fix parsing of Retry-After header which apparently changed to a floating point number.
- Pass MDC context down to AsyncConnection worker threads.
- Changed `buffer.size` default from 50 to 10.
- When buffering is enabled, only retry sending events when the network is down or the project
  is being throttled (HTTP 429).

Version 1.6.8
-------------

- Create a noop sentry client when the user provides bad configuration. (thanks dmclain)
- Use project.name instead of hardcoding 'app' in Android Gradle Plugin.

Version 1.6.7
-------------

- Add Automatic-Module-Name to manifest so we have basic Java 9 support.
- Print unhandled exceptions to stderr by default (like ThreadGroup does).

Version 1.6.6
-------------

- Attempt to unregister async/buffer shutdown hooks when connection is closed. (thanks obourgain)

Version 1.6.5
-------------

- Implemented Serializable for DebugImage, fixes buffering with Proguard symbols.
- Use default DSN when empty string is provided. (thanks afking)

Version 1.6.4
-------------

- Add web-fragment.xml to prevent classpath scanning.
- Update Android Gradle plugin to use new NPM package if available.

Version 1.6.3
-------------

- Fix issue where Gradle tasks were not created. (thanks szymanskip)

Version 1.6.2
-------------

- Handle multi-APK projects with different version codes.

Version 1.6.1
-------------

- Don't throw a ConnectionException if an event is filtered by the Sentry server (HTTP 403).
