@@ -22,7 +22,8 @@ class SentryProguardConfigTask extends DefaultTask {
         f.write("-keepattributes LineNumberTable,SourceFile\n" +
                 "-dontwarn com.facebook.fbui.**\n" +
                 "-dontwarn org.slf4j.**\n" +
-                "-dontwarn javax.**\n")
+                "-dontwarn javax.**\n" +
+                "-keep class io.sentry.event.Event { *; }\n")
         f.close()
         applicationVariant.getBuildType().buildType.proguardFiles(file)
     }
